# ContrastEnhancement

./: buda_usm.bat  buda_usm.py  church.bat  church_usm.bat  church_usm.py  flower_usm.bat  flower_usm.py  horse_usm.bat  horse_usm.py  lena_usm.bat  lena_usm.py  pattern_usm.bat  usm.py  usm_one_value.py
Bilat/: Makefile  README.txt  truncated_kernel_bf.cpp
CMake/: CMakeLists.txt
CMake/main/: CMakeLists.txt  main.cpp  parameters.cpp  parameters.h
Images/Lena/: lena.ppm
Images/Pattern/: pattern.ppm
